# liando

./: Cargo.toml  build.rs
src/: attendance.rs  main.rs  meetings.rs
ui/: app copy.slint  app.slint  common.slint  home_page.slint  settings_page.slint  ui.slint
