[package]
name = "liando"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
async-channel = "*"
async-global-executor = "*"
#i-slint-backend-winit = "*"
rfd = "*"
slint = "*"
time = { version = "*", features = ["formatting", "local-offset", "macros", "parsing"] }
umya-spreadsheet = "*"

[build-dependencies]
slint-build = "*"
